Implemented Landing-Page template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+---
+layout: default
+title: Nancy Tao
+subTitle: |
+    A computer science student at Georgia Tech.
+    Interested in artificial intelligence and design.
+---
