Changed subtitle from two lines to one for html formatting

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 ---
 layout: default
 title: Nancy Tao
-subTitle: |
-    A computer science student at Georgia Tech.
-    Interested in artificial intelligence and design.
+subTitle: A computer science student at Georgia Tech. Interested in artificial intelligence and design.
 ---
